--- a/content/8-posters/54.md
+++ b/content/8-posters/54.md
@@ -7,27 +7,27 @@ order: 540
 contributor:
   - first_name: "Marie-Hélène"
     last_name: "Nadeau"
-    title: "Assistant Conservator, Fine Arts"
-    affiliation: "Canadian Conservation Institute"
+    title: "Conservator, Paintings and Polychrome Surfaces, Fine Arts"
+    affiliation: "Canadian Conservation Institute, Ottawa"
 keywords:
-abstract: "A painting attributed to Tom Thomson (ca. 1911) was brought to the Canadian Conservation Institute (CCI) for treatment to address the instability of the cupped paint film and quilting of the unrestrained canvas. The aim of the treatment was to address condition issues with as minimal intervention as possible. Although complete removal of the quilting was not considered neither possible nor desirable, a methodology for reduction of these deformations was devised. The canvas was exposed to repeated and increasing levels of controlled humidification and to flattening treatments on the vacuum hot table under low pressure and warming. After strip-lining, the painting was installed in a “Dutch stretcher” with turnbuckle joins for even and constant tensioning of the canvas during treatment. The cupping and cracking paint layer was consolidated as the deformations relaxed. In place of a lining, a sheet of Plexiglas was secured to the face of a newly constructed stretcher. This insert supports the canvas, acts as a buffer against rapid humidity changes, and allows for visibility of the verso."
+abstract: "A painting (ca. 1910) attributed to Tom Thomson was brought to the Canadian Conservation Institute (CCI) for treatment to address the instability of the cupped paint film and quilting of the unrestrained canvas. The aim of the treatment was to address condition issues with as minimal intervention as possible. Although complete removal of the quilting was not considered possible or desirable, a methodology for reduction of these deformations was devised. The canvas was exposed to repeated and increasing levels of controlled humidification and to flattening treatments on the vacuum hot table under low pressure and warming. After strip-lining, the painting was installed in a “Dutch stretcher” with turnbuckle joins for even and constant tensioning of the canvas during treatment. The cupping and cracking paint layer was consolidated as the deformations relaxed. In place of a lining, a sheet of Plexiglas was secured to the face of a newly constructed stretcher. This insert supports the canvas, acts as a buffer against rapid humidity changes, and allows for visibility of the verso."
 ---
 
 ## Introduction
 
-A small, unstretched oil-on-canvas painting (ca. 1910), attributed to Tom Thomson (1877–1917), arrived at the Canadian Conservation Institute (CCI) in 2016 for treatment ([fig. 54.1](#fig-54-1)). The paint and ground layers were cracked and cupped and showed losses, and the unrestrained cotton canvas was heavily quilted. It was clear that the painting, which measures 33.1 cm high x 40.6 cm wide, had been cropped from a larger composition—given the lack of tacking margins, its frayed edges, and the absence of any tension garland. As this work is attributed to an important Canadian artist, the owner was understandably interested in stabilizing the painting and making it accessible for display, loans, and research as an example of the artist’s early work.
+A small, unstretched oil-on-canvas painting (ca. 1910), attributed to Tom Thomson (1877–1917), arrived at the Canadian Conservation Institute (CCI) in 2016 for treatment ([fig. 54.1](#fig-54-1)). The paint and ground layers were cracked and cupped and showed losses, and the unrestrained cotton canvas was heavily quilted. It was clear that the painting, which measures 33.1 cm high × 40.6 cm wide, had been cropped from a larger composition, given the lack of tacking margins, its frayed edges, and the absence of any tension garland. As this work is attributed to an important Canadian artist, the owner was understandably interested in stabilizing the painting and making it accessible for display, loans, and research as an example of the artist’s early work.
 
 {% figure 'fig-54-1' %}
 
 ## Condition
 
-According to the description provided by the gallery, prior to its acquisition the unstretched painting had been rolled (pre-1970), and then laid flat in the early 1970s by its then owner.
+According to the description provided by the gallery, prior to its acquisition the unstretched painting had been rolled (pre-1970), then laid flat in the early 1970s by its owner at the time.
 
-The paint and ground layers were cracked from being rolled and the cracking was exacerbated by the thickness of the paint layer(s) and by the brittleness of paint and ground. The cotton fabric support is a tight-weave, lightweight, untensioned canvas, which is extremely responsive to relative humidity fluctuations. The canvas, especially in areas where the paint is heavily applied, had developed local bulges from the tension exerted by the paint layers. Where the paint is cracked, tension had been released, so bulging often begins between and around areas of cracking in the paint and ground. Analyses had identified zinc fatty-acid salts (zinc soaps) in a beige paint layer applied as a primer above the ground. Microfissures had formed and may be associated with the cracking of the paint and the delamination between the priming and ground layer ({% cite 'Helwig et al. 2014' %}).
+The paint and ground layers were cracked from being rolled, and the cracking was exacerbated by the thickness of the paint layer(s) and by the brittleness of paint and ground. The cotton fabric support was a tight-weave, lightweight, untensioned canvas, extremely responsive to humidity fluctuations. The canvas, especially in areas where the paint was heavily applied, had developed local bulges from the tension exerted by the paint layers. Where the paint is cracked, tension had been released, so bulging often begins between and around areas of cracking in the paint and ground. Analyses had identified zinc fatty-acid salts (zinc soaps) in a beige paint layer applied as a primer above the ground. Microfissures had formed and may be associated with the cracking of the paint and the delamination between the priming and ground layer ({% cite 'Helwig et al. 2014' %}).
 
 ## Treatment Considerations
 
-The objectives of the treatment were as follows: to relax the cupping of paint and ground layers, to consolidate cracks and areas of delamination and, in tandem, to relax and bring back into plane some of the most prominent canvas deformations. We were especially concerned to maintain the integrity of the work of art, with as little introduction of new materials as possible and avoiding any materials that might obscure the original support. Despite those aims, the work needed, at the least, the addition of tacking margins to allow it to be secured onto a new auxiliary support.
+The objectives of the treatment were as follows: to relax the cupping of paint and ground layers, to consolidate cracks and areas of delamination and, in tandem, to relax and bring back into plane some of the most prominent canvas deformations. We were especially concerned about maintaining the integrity of the work of art, with as little introduction of new materials as possible and avoiding any materials that might obscure the original support. Despite those aims, the work needed, at the least, the addition of tacking margins to allow it to be secured onto a new auxiliary support.
 
 ## Methodology of Structural Treatment
 
@@ -37,29 +37,29 @@ Concerns related to cracking, cupping, and delamination of paint and ground laye
 
 Paper facings were put in place over areas of fragile paint using rabbit-skin glue (RSG) and distilled water (3% w/v).
 
-Prior to the application of strip lining, a 2.0 cm band of long-fiber, wet-strength paper was adhered to the recto perimeters of the work with 5% (w/v) Aquazol 200 in isopropanol. This was done in order to protect the cut paint and ground layers at the edges of the canvas.
+Prior to the application of strip-lining, a 2.0 cm band of long-fiber, wet-strength paper was adhered to the recto perimeters of the work with 5% (w/v) Aquazol 200 in isopropanol. This was done in order to protect the cut paint and ground layers at the edges of the canvas.
 
-Strips of a thin, nonwoven polyester (Hollytex) were adhered to the outer edges of the painting verso with Beva 371 film (2.5 mil). The Hollytex extended 2.0 cm into the perimeters, corresponding to the area that had been faced on the recto. Additional Hollytex extended beyond the perimeter by approximately 5.0 cm to prepare for the next steps. The painting was then turned face up, and strips of a woven acrylic fabric (Sunbrella) were adhered with Beva 371 film (2.5 mil) to the extensions of Hollytex. A few millimeters of the Sunbrella was frayed and butt-joined to the edges of the canvas perimeter. This strip lining allows a very thin layer of Hollytex to connect the painting to the heavier, stiffer Sunbrella, which provides the new tacking margins for the painting.
+Strips of a thin, nonwoven polyester (Hollytex) were adhered to the outer edges of the painting verso with Beva 371 film (2.5 mil). The Hollytex extended 2.0 cm into the perimeters, corresponding to the area that had been faced on the recto. Additional Hollytex extended beyond the perimeter by approximately 5.0 cm to prepare for the next steps. The painting was then turned faceup, and strips of a woven acrylic fabric (Sunbrella) were adhered with Beva 371 film (2.5 mil) to the extensions of Hollytex. A few millimeters of the Sunbrella was frayed and butt-joined to the edges of the canvas perimeter. This strip-lining allows a very thin layer of Hollytex to connect the painting to the heavier, stiffer Sunbrella, which provides the new tacking margins for the painting.
 
-The work was then installed into a working stretcher. Given the instability of the paint layers, it was determined that an impregnating consolidation through the canvas verso would further secure the ground and paint layers, especially through the relaxation and flattening processes. To ensure good penetration into and through the canvas, Beva 371 was diluted (1:1 toluene and mineral spirits) and applied by brush on the verso.
+The work was then installed into a working stretcher. Given the instability of the paint layers, it was determined that an impregnating consolidation through the canvas verso would further secure the ground and paint layers, especially through the relaxation and flattening processes. To ensure good penetration into and through the canvas, Beva 371 was diluted (1:1 toluene and mineral spirits) and applied by brush onto the verso.
 
-Local consolidation was carried out on the face of the painting, where cracks, cupping and lifting paint were particularly unstable. Rabbit-skin glue (7% w/v in distilled water) was applied with a small brush in several applications. An overall facing (low wet-strength “L” tissue secured with 7% RSG w/v in distilled water) was applied to the entire face of the painting to prevent any paint loss during the flattening treatments. The glue would allow the after-treatment removal of the facing to be done with water, which was then safe to conduct due to the Beva 371 impregnation.
+Local consolidation was carried out on the face of the painting, where cracks, cupping and lifting paint were particularly unstable. RSG (7% w/v in distilled water) was applied with a small brush in several applications. An overall facing (low wet-strength “L” tissue secured with 7% RSG w/v in distilled water) was applied to the entire face of the painting to prevent any paint loss during the flattening treatments. The glue would allow the after-treatment removal of the facing to be done with water, which was safe to conduct due to the Beva 371 impregnation.
 
 ### Relaxation of Cupping and Quilting
 
-Plastic recovery of planar distortions in paint, ground, and canvas is the result of a combination of moisture, heat, pressure, and tension. Humidification increases elasticity in the paint and ground and allows movement in the canvas; the heat assists in softening paint and ground layers, and the pressure allows the new, flatter, configuration to set into place as heat and moisture levels return to ambient conditions and the painting remains under tension.
+Plastic recovery of planar distortions in paint, ground, and canvas is the result of a combination of moisture, heat, pressure, and tension. Humidification increases elasticity in the paint and ground and allows movement in the canvas; the heat assists in softening paint and ground layers, and the pressure allows the new, flatter configuration to set into place as heat and moisture levels return to ambient conditions and the painting remains under tension.
 
 The work was exposed to cycles, each consisting of a humidification followed, without delay, by gentle warming and flattening on the vacuum hot table ([table 54.1](#table-54-1)). After each cycle, the tension of the working stretcher was adjusted by slightly expanding the turnbuckle joints at the corners. This provided a gentle, consistent tension during the treatment, with a slight increase in tension between cycles.
 
 {% figure 'table-54-1' %}
 
-In total, 13 cycles of relaxation treatment were executed. Significant structural changes were observed from cycles 1 to 5. After cycle 7, diminishing results were noted, despite other approaches being adopted (see [table 54.1](#table-54-1)). At the 13th round of flattening, the gains obtained appeared to have plateaued, and the relaxation-flattening phase was brought to completion (figs. [54.2](#fig-54-2), [54.3](#fig-54-3)). It is hoped that lasting results were achieved with this gradual approach to relaxation using moisture, heat, pressure, and tension. These factors allow for movement in the paint and canvas layers without increased stress and the potential for further damage to occur during treatment.
+In total, thirteen cycles of relaxation treatment were executed. Significant structural changes were observed from cycles 1 to 5. After cycle 7, diminishing results were noted, despite other approaches being adopted (see [table 54.1](#table-54-1)). At the thirteenth round of flattening, the gains obtained appeared to have plateaued, and the relaxation-flattening phase was brought to completion (figs. [54.2](#fig-54-2), [54.3](#fig-54-3)). It is hoped that lasting results were achieved with this gradual approach to relaxation using moisture, heat, pressure, and tension. These factors allow for movement in the paint and canvas layers without increased stress and the potential for further damage to occur during treatment.
 
 {% figure 'fig-54-2' %}
 
 {% figure 'fig-54-3' %}
 
-Various methods for moisture uptake were tried, including beginning with misting and placement of the tensioned painting in proximity to dampened blotters, and later placing the painting in a controlled environment (ESPEC environmental chamber) for four to five days at between 60% and 65% RH (see [table 54.1](#table-54-1)). We were interested to see if the presence of Beva in the canvas would prevent the fibers from responding to humidity. As we presumed, this did not appear to be the case, but likely the response was slowed by the presence of this adhesive. After each humidification, the tensioned painting was allowed to warm up on the vacuum hot table to between 45°C and 50°C under low pressure for 45 minutes, after which the painting was left to cool under weights for 24 hours to allow any change to the paint, ground, and canvas to plastically set.
+Various methods for moisture uptake were tried, including beginning with misting and placement of the tensioned painting in proximity to dampened blotters, and later placing the painting in a controlled environment (ESPEC environmental chamber) for four to five days at between 60% and 65% RH (see [table 54.1](#table-54-1)). We were interested to see if the presence of Beva 371 in the canvas would prevent the fibers from responding to humidity. As we presumed, this did not appear to be the case, but likely the response was slowed by the presence of this adhesive. After each humidification, the tensioned painting was allowed to warm up on the vacuum hot table to between 45°C and 50°C under low pressure for forty-five minutes, after which the painting was left to cool under weights for twenty-four hours to allow any change to the paint, ground, and canvas to plastically set.
 
 Given that significant changes were noted mostly between cycles 1 and 5, where the painting was at 50% RH and moisture was applied by light misting on the verso, it would appear that the paint and ground were sufficiently softened by a sudden uptake of moisture to allow for important movement in these layers. Exposure to water vapor plus direct contact from misting also effectively softened the paint and ground layers (cycles 5–8). Additional softening by exposure of the painting to longer periods of uptake of moisture using the ESPEC chamber did not produce significant results.
 
@@ -67,9 +67,9 @@ Given that significant changes were noted mostly between cycles 1 and 5, where t
 
 A new turnbuckle stretcher provided an auxiliary support for the painting. The dimensions are slightly larger than those of the painting to ease the turnover of the newly fabricated tacking edges, and to ensure that the maximum amount of painting is visible within the window of the frame. To give additional support to the painting when stretched, a sheet of 1/8 inch (approximately 0.3 cm) clear Plexiglas (polymethyl methacrylate) was cut to exactly fit the stretcher.
 
-The Plexiglas was secured to the face of the stretcher by means of countersunk screws. The predrilled screw holes were made larger than the screw shaft, thus allowing for some lateral movement of the Plexiglas if any small alterations are required to the stretcher. The Plexiglas edges and corners were rounded to reduce wear of the strip lining fabric at the turnover. The screw holes were backfilled with microcrystalline wax (Multiwax W‑445 Microcrystalline Wax) and covered with a lightweight Japanese tissue.
+The Plexiglas was secured to the face of the stretcher by means of countersunk screws. The predrilled screw holes were made larger than the screw shaft, thus allowing for some lateral movement of the Plexiglas if any small alterations are required to the stretcher. The Plexiglas edges and corners were rounded to reduce wear of the strip-lining fabric at the turnover. The screw holes were backfilled with microcrystalline wax (Multiwax W‑445 Microcrystalline Wax) and covered with a lightweight Japanese tissue.
 
-The rigid sheet will stabilize the auxiliary support structure, permit the retention of an original auxiliary support prevent stretcher bar cracks, remove stress load on the canvas, and protect against rapid humidity changes. It also prevents deposits of dust and access by pollutants from the verso as well as reducing vibration to the painting during handling and transit. Depending on the material chosen, it may allow for visibility of the verso. Other materials can be used for this purpose, such as a chemically stable foam board.
+The rigid sheet will stabilize the auxiliary support structure, permit the retention of an original auxiliary support, prevent stretcher bar cracks, remove stress load on the canvas, and protect against rapid humidity changes. It also prevents deposits of dust and access by pollutants from the verso and reduces vibration to the painting during handling and transit. Depending on the material chosen, it may allow for visibility of the verso. Other materials can be used for this purpose, such as a chemically stable foam board.
 
 A narrow, L-shape inner basswood frame was designed to protect the outer edges of the painting and to cover the exposed Sunbrella margins around the face of the painting. The frame also acts as a spacer between the paint surface and the glazing layer in the final framing and allows for safe handling of the painting either before it is placed in the outer decorative frame or upon removal from this frame ([fig. 54.4](#fig-54-4)).
 
@@ -77,8 +77,8 @@ A narrow, L-shape inner basswood frame was designed to protect the outer edges o
 
 ## Reflections
 
-The combination of repeated applications of humidification, low heat, and low pressure while maintaining tensioning was successful in reducing the quilting and gave satisfactory results from both an aesthetic and structural point of view. Given that complete flattening was never anticipated and that the canvas still had physical integrity, minimal intervention combined with support from a rigid insert on the stretcher were deemed to be the best treatment choices. It is also anticipated that this painting will be displayed in climate-controlled environments, which will reduce future movement in paint and ground layers as well as in the canvas and ensure that the new planar configuration will remain. This project demonstrates the success of minimal intervention for maximum benefit in the case of a structurally compromised painting on canvas.
+The combination of repeated applications of humidification, low heat, and low pressure while maintaining tensioning was successful in reducing the quilting and gave satisfactory results from both an aesthetic and structural point of view. Given that complete flattening was never anticipated and that the canvas still had physical integrity, minimal intervention, combined with support from a rigid insert on the stretcher, was deemed to be the best treatment choice. It is also anticipated that this painting will be displayed in climate-controlled environments, which will reduce future movement in paint and ground layers as well as in the canvas and ensure that the new planar configuration will remain. This project demonstrates the success of minimal intervention for maximum benefit in the case of a structurally compromised painting on canvas.
 
 ## Acknowledgments
 
-I would like to thank CCI Senior Conservator of Fine Arts, Wendy Baker, for her mentorship during the execution of the treatment and her invaluable help in reviewing this article. I also want to acknowledge Senior Conservation Scientist (retired) Paul Bégin for his help with the ESPEC chamber, and the CCI former and current staff who carried out analyses and photodocumentation: Dominique Duguay, Eric J. Henderson, Germain Wiseman, Jason Anema, Kate Helwig, and Mylène Choquette. I am also very grateful to preparatory technicians Richard Lane and Denis Larouche.
+I would like to thank Wendy Baker, CCI senior conservator, Paintings and Polychrome Surfaces, for her mentorship during the execution of the treatment and her invaluable help in reviewing this article. I also want to acknowledge Paul Bégin, senior conservation scientist (retired), for his help with the ESPEC chamber, and the CCI former and current staff who carried out analyses and photodocumentation: Dominique Duguay, Eric J. Henderson, Germain Wiseman, Jason Anema, Kate Helwig, and Mylène Choquette. I am also very grateful to preparatory technicians Richard Lane and Denis Larouche.
